<resources>
    <string name="app_name">HamedanApp</string>
    <string name="title_map">همدان اپ</string>
    <string name="title_reverse">Reverse</string>
    <string name="title_forward">Search</string>
    <string name="title_direction">Direction</string>
    <string name="title_static">Static</string>
    <string name="parse_error">Parsing Error</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="zoom">Zoom: </string>
    <string name="zoom_level_hint">6 to 17</string>
    <string name="create_static_map">Create Static Map</string>
    <string name="static_maps_hint">Tap on Create button to fetch an image for the entered coordinate</string>
    <string name="center_point">Center Point</string>
    <string name="map_download_failed">Error in downloading map</string>
    <string name="fill_all_fields">Please fill all fields.</string>
    <string name="distance">Distance:</string>
    <string name="reset_points">Reset</string>
    <string name="direction_hint">Tap on the map to choose starting and ending points</string>
    <string name="direction_receiving_failed">Error in receiving direction data</string>
    <string name="search_in_places">Search in places</string>
    <string name="province">استان</string>
    <string name="comma">،</string>
    <string name="latitude_example" translatable="false">35.7454</string>
    <string name="longitude_example" translatable="false">51.3572</string>
    <string name="zoom_example" translatable="false">13</string>
    <string name="location_is_needed_to_function">App needs location to function</string>
    <string name="no_address_available">No Address Available</string>
    <string name="new_location">موقیعت جدید</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">"ثبت نام"</string>
    <string name="hint_username">"لطفا نام کاربری خود را وارد کنید"</string>
    <string name="hint_password">"لطفا رمز عبور خود را وارد کنید."</string>
    <string name="hint_text_security">"لطفا متن امنیتی خود را وارد کنید."</string>
    <string name="hint_text_new_pass">"لطفا رمز عبور جدید را وارد کنید."</string>

    <string name="title_btn_login">"ورود"</string>
    <string name="title_btn_register">"ثبت نام"</string>
    <string name="et_forget_pass">"رمز عبور خود را فراموش کرده اید؟"</string>
    <string name="et_goto_register">"ثبت نام نکرده اید؟ کلیک کنید"</string>
    <string name="title_activity_new__banner">New_Banner</string>
</resources>