<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#1f0be2"
        android:elevation="16dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ورود"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_margin="20dp"
            />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_layout"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="100dp"
        android:textColorHint="#1f0be1"

        >

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColorHighlight="#000"
            android:textColorLink="#000"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pass_layout"
        android:layout_below="@id/username_layout"
        android:layout_marginTop="20dp"
        android:textColorHint="#1f0be2"
        app:counterEnabled="true"
        app:counterMaxLength="7"
        app:counterTextAppearance="@style/TextAppearance.Design.Counter"
        app:counterOverflowTextAppearance="@style/TextAppearance.Design.Counter.Overflow"

        >

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_layout"
            android:layout_margin="20dp"
            android:gravity="right"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:text="@string/title_btn_login"
        android:background="#1f0be1"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/pass_layout"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_forget_password"
        android:gravity="center"
        android:text="@string/et_forget_pass"
        android:textColor="#000000"
        android:textSize="15sp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textColorHighlight="#838383"

        android:layout_below="@id/btn_login"
        />

    <TextView
        android:id="@+id/tv_goto_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_goto_register"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textColorHighlight="#838383"

        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/tv_forget_password"
        android:layout_marginBottom="15dp" />

</RelativeLayout>




